--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-device-detect": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-loading": "^2.0.3",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-social-icons": "^5.14.0",
     "react-spring": "^9.5.0",
