--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.07",
   "private": true,
   "dependencies": {
+    "@nrjwolf/color-log": "^1.0.4",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
