--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nrjwolf.com",
-  "version": "1.0.1",
+  "version": "1.0.11",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.9.3",
@@ -14,6 +14,7 @@
     "@types/node": "^16.11.45",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "axios": "^0.27.2",
     "react": "^18.2.0",
     "react-device-detect": "^2.2.2",
     "react-dom": "^18.2.0",
