--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.13",
   "private": true,
   "dependencies": {
+    "@chakra-ui/react": "^2.2.4",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
-    "@mui/material": "^5.9.2",
     "@nrjwolf/color-log": "^1.0.4",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
@@ -15,10 +15,12 @@
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "axios": "^0.27.2",
+    "framer-motion": "^6.5.1",
     "react": "^18.2.0",
     "react-device-detect": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-loading": "^2.0.3",
+    "react-preload-image": "^1.0.7",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-social-icons": "^5.14.0",
