--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nrjwolf.com",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "private": true,
   "dependencies": {
     "@chakra-ui/react": "^2.2.4",
@@ -26,6 +26,7 @@
     "react-social-icons": "^5.14.0",
     "react-spring": "^9.5.0",
     "typescript": "^4.7.4",
+    "usehooks-ts": "^2.6.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
