--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nrjwolf.com",
-  "version": "1.0.35",
+  "version": "1.0.4",
   "private": true,
   "dependencies": {
     "@chakra-ui/react": "^2.2.4",
@@ -14,17 +14,23 @@
     "@types/node": "^16.11.45",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "@types/react-syntax-highlighter": "^15.5.4",
     "axios": "^0.27.2",
+    "chakra-ui-markdown-renderer": "^4.1.0",
     "framer-motion": "^6.5.1",
     "react": "^18.2.0",
     "react-device-detect": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-loading": "^2.0.3",
+    "react-markdown": "^8.0.3",
     "react-preload-image": "^1.0.7",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-social-icons": "^5.14.0",
     "react-spring": "^9.5.0",
+    "react-syntax-highlighter": "^15.5.0",
+    "rehype-raw": "^6.1.1",
+    "remark-gfm": "^3.0.1",
     "typescript": "^4.7.4",
     "usehooks-ts": "^2.6.0",
     "web-vitals": "^2.1.4"
