--- a/package.json
+++ b/package.json
@@ -1,62 +1,29 @@
 {
   "name": "nrjwolf.com",
-  "version": "1.0.42",
+  "version": "0.1.0",
   "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build && next export",
+    "start": "next start",
+    "lint": "next lint"
+  },
   "dependencies": {
     "@chakra-ui/react": "^2.2.4",
-    "@emotion/react": "^11.9.3",
-    "@emotion/styled": "^11.9.3",
-    "@nrjwolf/color-log": "^1.0.4",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.11.45",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
     "@types/react": "^18.0.15",
-    "@types/react-dom": "^18.0.6",
-    "@types/react-syntax-highlighter": "^15.5.4",
-    "axios": "^0.27.2",
-    "chakra-ui-markdown-renderer": "^4.1.0",
-    "framer-motion": "^6.5.1",
+    "framer-motion": "^6",
+    "next": "12.2.3",
     "react": "^18.2.0",
     "react-device-detect": "^2.2.2",
     "react-dom": "^18.2.0",
-    "react-loading": "^2.0.3",
-    "react-markdown": "^8.0.3",
-    "react-preload-image": "^1.0.7",
-    "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
     "react-social-icons": "^5.14.0",
-    "react-spring": "^9.5.0",
-    "react-syntax-highlighter": "^15.5.0",
-    "rehype-raw": "^6.1.1",
-    "remark-gfm": "^3.0.1",
-    "typescript": "^4.7.4",
-    "usehooks-ts": "^2.6.0",
-    "web-vitals": "^2.1.4"
+    "react-spring": "^9.5.2",
+    "typescript": "^4.7.4"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "devDependencies": {
+    "eslint": "8.21.0",
+    "eslint-config-next": "12.2.3"
   }
 }
