--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "@types/react": "^18.0.15",
+    "chakra-ui-markdown-renderer": "^4.1.0",
     "framer-motion": "^6",
     "next": "12.2.3",
+    "next-mdx-remote": "^4.1.0",
     "react": "^18.2.0",
     "react-device-detect": "^2.2.2",
     "react-dom": "^18.2.0",
+    "react-markdown": "^8.0.3",
     "react-social-icons": "^5.14.0",
     "react-spring": "^9.5.2",
     "typescript": "^4.7.4"
