--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nrjwolf.com",
-  "version": "1.0.5",
+  "version": "1.0.51",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -12,6 +12,7 @@
     "@chakra-ui/react": "^2.2.4",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "@types/node": "^18.6.3",
     "@types/react": "^18.0.15",
     "chakra-ui-markdown-renderer": "^4.1.0",
     "framer-motion": "^6",
